tests/baselines/reference/tsxErrorRecovery3.errors.txt
file1.tsx(3,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
file1.tsx(3,1): error TS2657: JSX expressions must have one parent element.
file1.tsx(3,2): error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
file1.tsx(3,6): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
file1.tsx(4,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
file1.tsx(4,2): error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
file1.tsx(4,6): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
file2.tsx(1,9): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
file2.tsx(1,9): error TS2657: JSX expressions must have one parent element.
file2.tsx(1,10): error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
file2.tsx(1,14): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
file2.tsx(1,20): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
file2.tsx(1,21): error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
file2.tsx(1,25): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.


==== file1.tsx (7 errors) ====
    declare namespace JSX { interface Element { } }
    
    <div></div>
    ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    ~~~~~~~~~~~
     ~~~
!!! error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
         ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    <div></div>
    ~~~~~~~~~~~
!!! error TS2657: JSX expressions must have one parent element.
    ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
     ~~~
!!! error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
         ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    
==== file2.tsx (7 errors) ====
    var x = <div></div><div></div>
            ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
            ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2657: JSX expressions must have one parent element.
             ~~~
!!! error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
                 ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                       ~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                        ~~~
!!! error TS2874: This JSX tag requires 'React' to be in scope, but it could not be found.
                            ~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
    